// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Certificação — regressão industrial (snapshots) > furação europeia na lateral — apenas cavilhas + rasgo (sem Ø5) 1`] = `
[
  {
    "face": "A",
    "x": 8,
    "y": 15,
  },
  {
    "face": "A",
    "x": 8,
    "y": 476.5,
  },
  {
    "face": "A",
    "x": 490,
    "y": 15,
  },
  {
    "face": "A",
    "x": 490,
    "y": 479.5,
  },
]
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=1 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 634.5,
  "bodyWidth": 548,
  "height": 720,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 0,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 271.5,
  "bodyWidth": 548,
  "height": 357,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -181.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 290.5,
  "bodyWidth": 548,
  "height": 359,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 180.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 150.5,
  "bodyWidth": 548,
  "height": 236,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -242,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 169.5,
  "bodyWidth": 548,
  "height": 238,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -1,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 169.5,
  "bodyWidth": 548,
  "height": 238,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 241,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 90,
  "bodyWidth": 548,
  "height": 175.5,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -272.25,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 109,
  "bodyWidth": 548,
  "height": 177.5,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -91.75,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 109,
  "bodyWidth": 548,
  "height": 177.5,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 89.75,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 4`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 109,
  "bodyWidth": 548,
  "height": 177.5,
  "index": 3,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 271.25,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;
